# nimble

./: .gitignore  Cargo.toml  README.md  rae.ps1
docs/info/: architecture.md  performance.md
docs/stdlib/: ffi.md  json.md  os.md
examples/: README.md
examples/stdlib/ffi/: abs.nmb  open_any.nmb  strlen.nmb
examples/stdlib/io/: file_ops.nmb  stream_tools.nmb
examples/stdlib/regex/: extract.nmb  match_replace.nmb
src/: lib.rs  main.rs  profiler.rs
src/compiler/: bytecode.rs  compiler.rs  mod.rs  register.rs
src/error/: error.rs  mod.rs
src/ir/: mod.rs
src/jit/: cache.rs  codegen.rs  jit.rs
src/lexer/: lexer.rs  token.rs
src/modules/: fetcher.rs  registry.rs  resolver.rs
src/optimizer/: mod.rs  peephole.rs
src/parser/: ast.rs  parser.rs
src/repl/: repl.rs
src/types/: infer.rs  ty.rs
src/vm/: builtins.rs  frame.rs  gc.rs  mod.rs  value.rs  vm.rs
src/vm/legacy/: frame.rs  mod.rs  vm.rs
stdlib/ffi/: mod.nmb
stdlib/io/: mod.nmb
stdlib/json/: mod.nmb
stdlib/list/: mod.nmb
stdlib/map/: mod.nmb
stdlib/math/: mod.nmb
stdlib/net/: mod.nmb
stdlib/os/: mod.nmb
stdlib/path/: mod.nmb
stdlib/process/: mod.nmb
stdlib/regex/: mod.nmb
stdlib/string/: mod.nmb
stdlib/time/: mod.nmb
tests/: example_regressions.rs  ffi_regressions.rs  language_features.rs
